[tool.poetry]
name = "stock"
version = "0.1.0"
description = ""
authors = ["Kitamura <ymyk6602@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
bs4 = "^0.0.1"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = ".venv"

[tool.black]
line-length = 100

[tool.flake8]
max-complexity = 10
max-line-length = 105
indent-size = 4